@@ -59,6 +59,9 @@ Bug fixes:
   - fix an invalid column name referenced in emaj_delete_mark_group() function.
   - in emaj_delete_mark_group() function, fix an erroneous information 
     inserted into the emaj_hist table.
+  - during emaj_drop_group() operation, delete now all rows related to the 
+    tables belonging to the dropped group from emaj_sequence and emaj_seq_hole 
+    tables.
 
 0.9.0
 -----
